More alignment issues
Bloody iPad bug should be fixed by disabling the zoom. fingers crossed.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -171,7 +171,7 @@ h2 {
 @media screen and (max-width: 981px){
 
 	.wrapper {
-		width:90%;
+		width:100%;
 		margin: 7em auto;
 	}
 
@@ -186,7 +186,7 @@ h2 {
 		width: 48%;
 		min-width: 30em;
 		height:30em;
-		margin: 1%;
+		margin: 1% ;
 	}
 }
 
